--- a/week2/index.html
+++ b/week2/index.html
@@ -1,9 +1,10 @@
-!doctype html>
+<!doctype html>
 <html>
  <head> 
  <title>
  Examples of lists 
  </title>
+  <link rel="stylesheet" href="style.css" />
  </head>	
 
 <body>
